# whisp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Package.resolved  Package.swift  README.md  TODO.md  knip.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
Sources/WhispApp/: AccessibilityContextCollector.swift  AppCoordinator.swift  (+24 more)
docs/: ARCHITECTURE.md  BENCHMARK_COMPARISON_SPEC_DRAFT.md  BENCHMARK_DATA_MODEL.md  FEATURE_IDEAS.md  IMPLEMENTATION_PLAN.md  TODO.md  note.md  note_v2.md  refactor_spec.md
scripts/: analyze_pipeline_log.sh  analyze_prompt_traces.sh  benchmark_cases.sh  benchmark_e2e_cases.sh  benchmark_full_pipeline.sh  benchmark_generation_cases.sh  benchmark_manual_cases.sh  benchmark_stt_cases.sh  benchmark_stt_latency.sh  benchmark_vision_cases.sh  build_macos_app.sh  capture_debug_view_snapshot.sh  export_system_log.sh  migrate_benchmark_data.swift  migrate_manual_case_assets.sh  migrate_pairwise_and_dataset_schema.swift  prepare_benchmark_sample.sh  rebuild_reset_launch.sh  reset_permissions.sh  run_component_eval_loop.sh  run_eval_loop.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_sound.rs
src-tauri/src/: audio_file.rs  billing.rs  clipboard.rs  config.rs  context.rs  direct_input.rs  error.rs  key_sender.rs  lib.rs  main.rs  notification.rs  post_processor.rs  recorder.rs  shortcut.rs  sound.rs  stt_client.rs  tray.rs  usage.rs
(+181 files in other folders)
